--- a/open-api-contract/openapi/course/topics-topicid-lessons-lessonid-materials.yaml
+++ b/open-api-contract/openapi/course/topics-topicid-lessons-lessonid-materials.yaml
@@ -1,5 +1,6 @@
 get:
   summary: Read or watch lesson materials
+  operationId: getMaterialsByTopicIdAndLessonId
   tags:
     - Courses
   parameters:
